# furnace

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
scripts/: check_m1.py  check_m10.py  check_m2.py  check_m3.py  check_m4.py  check_m5.py  check_m6.py
src/: generate.rs  gguf.rs  main.rs  model.rs  perf.rs  quant.rs  sampler.rs  selftest.rs  tensor.rs  tokenizer.rs
