[package]
name = "furnace"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
half = "2"
clap = { version = "4", features = ["derive"] }
# Pre-tokenizer splitting only: Qwen's pattern needs lookahead, which the
# plain regex crate does not support.
fancy-regex = "0.14"
memmap2 = "0.9"
rayon = "1"

[profile.release]
debug = true
